--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "code-talk-server",
-  "version": "1.1.0",
+  "name": "educationELLy-graphql-server",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -17,7 +17,7 @@
   "license": "GNU GPLv3",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
@@ -25,12 +25,12 @@
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.10"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "apollo-server": "^2.4.0",
-    "apollo-server-express": "^2.4.0",
+    "apollo-server": "^2.4.2",
+    "apollo-server-express": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
