--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "educationELLy-graphql-server",
+  "name": "educationelly-graphql-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -35,15 +35,11 @@
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "dotenv": "^6.2.0",
-    "env-cmd": "^8.0.2",
     "express": "^4.16.4",
     "graphql": "^14.1.1",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-redis-subscriptions": "^2.0.0",
     "graphql-resolvers": "^0.3.2",
     "jsonwebtoken": "^8.4.0",
-    "pg": "^7.8.0",
-    "sequelize": "^4.42.0",
-    "uuid": "^3.3.2"
+    "mongoose": "^5.4.13",
+    "validator": "^10.11.0"
   }
 }
