--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "license": "GNU GPLv3",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
     "axios": "^0.18.0",
     "chai": "^4.2.0",
@@ -32,6 +32,7 @@
     "apollo-server": "^2.4.6",
     "apollo-server-express": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "dotenv": "^6.2.0",
@@ -41,6 +42,7 @@
     "graphql-resolvers": "^0.3.2",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.15",
+    "uuid": "^3.3.2",
     "validator": "^10.11.0"
   }
 }
