--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "apollo-server": "^2.4.8",
     "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser-graphql": "^1.1.0",
     "cors": "^2.8.5",
     "dataloader": "^1.4.0",
     "dotenv": "^6.2.0",
