--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "nodemon --exec babel-node src/index.js",
     "test:run-server": "TEST_DATABASE=mytestdatabase npm start",
     "test:execute-test": "mocha --require @babel/register 'src/**/*.spec.js'",
-    "test": "echo 'Tests require server to be running. Run npm run test:run-server in one terminal, then npm run test:execute-test in another.'"
+    "test": "echo 'Tests require server to be running. Run npm run test:run-server in one terminal, then npm run test:execute-test in another.'",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "keywords": [],
   "author": "Jeff Maxwell <maxjeffwell@gmail.com>",
@@ -18,11 +20,18 @@
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
+    "@babel/eslint-parser": "^7.28.0",
     "@babel/node": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
     "axios": "^1.10.0",
     "chai": "^4.2.0",
+    "eslint": "^9.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-security": "^3.0.1",
     "mocha": "^11.7.1",
     "morgan": "^1.9.1",
     "nodemon": "^3.1.10"
