--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "graphql": "^16.11.0",
-    "graphql-iso-date": "^3.6.1",
     "graphql-resolvers": "^0.3.3",
+    "graphql-scalars": "^1.24.2",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
