Add permissions for Trivy security scanning
- Add contents: read permission for checkout
- Add packages: write for image pushing
- Add security-events: write for SARIF upload
- Fixes Trivy scanner permission issues

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -16,6 +16,10 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
 
     steps:
       - name: Checkout code
