--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "^1.9.1",
+    "node-fetch": "^3.3.2",
     "validator": "^13.15.15"
   }
 }
