Add chat mutation for conversational AI help
- Add chat mutation with ChatMessageInput and ChatContextInput types
- Add chat resolver calling gateway /api/ai/chat endpoint
- Support user role, grade level, ELL status context
- Update .env.example with AI_GATEWAY_URL

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ JWT_SECRET=your-super-secret-jwt-key-here
 NODE_ENV=development
 PORT=8000
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# AI Gateway Configuration
+# URL of the shared AI gateway for conversational help and AI features
+# Docker: http://shared-ai-gateway:8002
+# Local dev: http://localhost:8002
+AI_GATEWAY_URL=http://shared-ai-gateway:8002
