--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongoose": "^8.16.3",
     "morgan": "^1.9.1",
     "node-fetch": "^3.3.2",
+    "prom-client": "^15.1.0",
     "validator": "^13.15.15"
   }
 }
