Set up Jest test infrastructure with MongoDB Memory Server
- Add Jest, Supertest, and mongodb-memory-server for self-contained tests
- Create test setup with in-memory MongoDB for isolation
- Add test server helper for GraphQL integration tests
- Add comprehensive tests for User and Student resolvers (75 tests)
- Add model unit tests for validation logic
- Remove duplicate email index in User model
- Achieve 68.6% statement coverage overall

--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "scripts": {
     "start": "babel-node src/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
-    "test:run-server": "TEST_DATABASE=mytestdatabase npm run dev",
-    "test:execute-test": "mocha --require @babel/register 'src/**/*.spec.js'",
-    "test": "echo 'Tests require server to be running. Run npm run test:run-server in one terminal, then npm run test:execute-test in another.'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --forceExit",
+    "test:verbose": "jest --verbose",
+    "test:legacy": "mocha --require @babel/register 'src/tests/**/*.spec.js'",
+    "test:legacy:server": "TEST_DATABASE=mytestdatabase npm run dev",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "docs": "spectaql spectaql.yml",
@@ -23,22 +27,25 @@
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/eslint-parser": "^7.28.0",
+    "@babel/preset-env": "^7.29.0",
     "@babel/register": "^7.6.2",
     "axios": "^1.10.0",
     "chai": "^4.2.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.32.0",
+    "jest": "^30.2.0",
     "mocha": "^11.7.1",
+    "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.1.10",
-    "spectaql": "^3.0.6"
+    "spectaql": "^3.0.6",
+    "supertest": "^7.2.2"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser-graphql": "^1.1.0",
     "cookie-parser": "^1.4.7",
