Add Sentry error tracking and performance monitoring
- Add @sentry/node for error tracking and APM
- Create Sentry utility module with initialization and helpers
- Create Sentry Apollo plugin for GraphQL-specific tracing
- Capture unexpected errors (not user-facing ones like auth/validation)
- Add user context to Sentry for better debugging
- Track slow GraphQL resolvers (>100ms) as breadcrumbs
- Filter sensitive data (passwords, tokens) before sending to Sentry
- Add graceful shutdown with Sentry flush
- Update .env.example with Sentry configuration

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,15 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 # Docker: http://shared-ai-gateway:8002
 # Local dev: http://localhost:8002
 AI_GATEWAY_URL=http://shared-ai-gateway:8002
+
+# Sentry Error Tracking & Performance Monitoring
+# Get your DSN from https://sentry.io/
+# Leave empty to disable Sentry
+SENTRY_DSN=
+
+# MongoDB Connection Pool (optional)
+MONGODB_POOL_MIN_SIZE=5
+MONGODB_POOL_MAX_SIZE=50
+
+# JWT Configuration (optional)
+JWT_EXPIRY=1d
