--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
+    "@sentry/node": "^10.38.0",
     "bcryptjs": "^2.4.3",
     "body-parser-graphql": "^1.1.0",
     "cookie-parser": "^1.4.7",
